<resources>
    <string name="app_name">Alpha</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transaction">Transactions</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="todo">TODO</string>
    <string name="msg_no_users">No party found!</string>
    <string name="button">Button</string>
    <string name="add_user">Add Party</string>
    <string name="delete_user">Delete Party</string>
    <string name="user_txt">| %1$s | %2$s</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="add">Add</string>
    <string name="invalid_input_error">Please provide a valid input for %1$s</string>
    <string name="users">Parties</string>
    <string name="label_add_usr_form">Add Party Form</string>
    <string name="duplicate_user_error">Party with the given name already exists. Please use a different name.</string>
    <string name="edit">Edit basic info.</string>
    <string name="line_name">Line Name</string>
    <string name="place">Place</string>
    <string name="interest">Interest (%)</string>
    <string name="add_line">Add Line</string>
    <string name="menu_lines">Lines</string>
    <string name="add_lines">Add Lines</string>
    <string name="delete_all_lines">Delete All Lines</string>
    <string name="no_lines">no lines found</string>
    <string name="update_line">Update Line</string>
    <string name="duplicate_line">Line with the given name already exists. Please use a different name.</string>
    <string name="party_name">Party Name</string>
    <string name="principal_amt">Principal Amount</string>
    <string name="amt_given">Amount Given</string>
    <string name="add_party">Add Party</string>
    <string name="update_party">Update Party</string>
    <string name="duplicate_party">Party with given name already present</string>
    <string name="transactions">Transactions</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="amt">Amount</string>
    <string name="delete_all_transaction">Delete All</string>
    <string name="no_transaction">No transactions</string>
    <string name="export_data">Export data</string>
</resources>