<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_lines">

    <fragment
        android:id="@+id/nav_transaction"
        android:name="com.example.alpha.ui.transactions.TransactionFragment"
        android:label="@string/menu_transaction"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_users"
        android:name="com.example.alpha.ui.users.UsersFragment"
        android:label="@string/users"
        tools:layout="@layout/recycler_view_list" />

    <fragment
        android:id="@+id/nav_lines"
        android:name="com.example.alpha.ui.lines.LinesFragment"
        android:label="@string/menu_lines"
        tools:layout="@layout/recycler_view_list" />
</navigation>