<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".PartyFormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="188dp"
        tools:layout_editor_absoluteY="229dp">

        <EditText
            android:id="@+id/party_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/party_name"
            android:autofillHints="" />

        <EditText
            android:id="@+id/principal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/principal_amt"
            android:autofillHints="" />

        <EditText
            android:id="@+id/interest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:hint="@string/interest"
            android:autofillHints="" />

        <Spinner
            android:id="@+id/lines_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/party_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <Button
            android:id="@+id/btn_add_party"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addLine"
            android:text="@string/add_party" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>